--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -96,6 +96,7 @@
     <CodesignProvision>Automatic:AdHoc</CodesignProvision>
     <CodesignKey>iPhone Distribution</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <IpaIncludeArtwork>true</IpaIncludeArtwork>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
     <DebugType>none</DebugType>
